--- a/Day4Assign/Day4Assign/Day4Assign.csproj
+++ b/Day4Assign/Day4Assign/Day4Assign.csproj
@@ -13,4 +13,6 @@
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.20" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="https://json.schemastore.org/appveyor" /></VisualStudio></ProjectExtensions>
+
 </Project>
